collectd (4.9.1-2) unstable; urgency=low

  * debian/rules:
    - Re-enabled non-kfreebsd plugins on i386 and amd64, which had been
      disabled accidentally by using findstring (which does a substring match)
      to compare DEB_BUILD_ARCH with kfreebsd-{amd64,i386}; thanks to ilia
      kudirov for reporting this (Closes: #567259).

 -- Sebastian Harl <tokkee@debian.org>  Thu, 28 Jan 2010 21:58:35 +0100

collectd (4.9.1-1) unstable; urgency=low

  * New upstream release:
    New plugins:
    - Number of context switches done by the OS: contextswitch
    - Query statistics from mon.itor.us: Monitorus (Perl based plugin)
    - Collect statistics from NetApp filers: netapp (disabled in Debian;
      libnetapp is not available)
    - OpenVZ statistics: OpenVZ (Perl based plugin)
    - Embedding a Python interpreter: python
    - Query statistics from RouterOS: routeros (disabled in Debian;
      librouteros is not available)
    New matches:
    - Match values using a hash function of the hostname: hashed
    New targets:
    - Scale (multiply) values: scale
  * debian/control:
    - Build-depend on "python-dev", required to build the "python" plugin.
  * debian/collectd-core.install:
    - Install all collectd-*.5 manpages (in particular, this includes the
      newly added collectd-python.5).
  * Added support for kfreebsd-{i386,amd64}; see below for details
    (Closes: #566521).
  * debian/control, debian/rules:
    - Disabled the following Linux-specific plugins / removed the following
      build-deps on kfreebsd-{i386,amd64}:
      + "iptables" plugin / iptables-dev
      + "ipvs" plugin / linux-libc-dev
      + "madwifi" plugin
      + "netlink" plugin / iproute-dev
      + "sensors" plugin / libsensors4-dev
      + "vserver" plugin
    - Disabled the following plugins / removed the following build-deps on
      kfreebsd-{i386,amd64} -- the build-deps are (not yet) available on
      kfreebsd:
      + "gmond" plugin / libganglia1-dev