@@ -5,8 +5,10 @@ collectd (4.9.1-2) unstable; urgency=low
       disabled accidentally by using findstring (which does a substring match)
       to compare DEB_BUILD_ARCH with kfreebsd-{amd64,i386}; thanks to ilia
       kudirov for reporting this (Closes: #567259).
+    - Replaced all occurrences of 'findstring' with appropriate 'filter'
+      statements to make sure to match words rather than substrings.
 
- -- Sebastian Harl <tokkee@debian.org>  Thu, 28 Jan 2010 21:58:35 +0100
+ -- Sebastian Harl <tokkee@debian.org>  Thu, 28 Jan 2010 22:09:16 +0100
 
 collectd (4.9.1-1) unstable; urgency=low
 
